--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ body,
 h1,
 h2,
 h3,
-h4,
+h1,
 p,
 ul[class],
 ol[class],
@@ -78,16 +78,23 @@ select {
 }
 
 body {
-  background-color: cornflowerblue;
+  background-image: url();
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),
+    url("https://images.unsplash.com/photo-1553095066-5014bc7b7f2d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2071&q=80");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .App {
   text-align: center;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: aliceblue;
+  font-family: "Ubuntu";
+  height: 100%;
+  z-index: 3;
 }
 
 .contacts {
@@ -95,10 +102,12 @@ body {
 }
 
 .contacts__item {
+  color: black;
+  background-color: aliceblue;
   display: flex;
   flex-direction: column;
   border: 3px solid black;
-  border-radius: 4px;
+  border-radius: 2px;
   margin-bottom: 10px;
   padding: 10px;
 }
@@ -106,8 +115,9 @@ body {
 .contacts__button {
   margin-left: auto;
   border: none;
-  background-color: royalblue;
-  border-radius: 4px;
+  background-color: aliceblue;
+  border: 2px solid black;
+  border-radius: 2px;
   cursor: pointer;
 }
 
@@ -121,16 +131,19 @@ body {
 }
 
 .form__input {
-  background: none;
-  border: black 4px solid;
-  border-radius: 10px;
+  color: black;
+
+  border: 3px solid black;
+
+  border-radius: 2px;
   margin-bottom: 10px;
 }
 
 .form__button {
-  background-color: royalblue;
-  border: 3px black solid;
-  border-radius: 4px;
+  background-color: aliceblue;
+  border: 3px solid black;
+
+  border-radius: 2px;
   padding: 10px;
   cursor: pointer;
 }
@@ -142,7 +155,8 @@ body {
 }
 
 .filter__input {
-  background-color: royalblue;
-  border: black 3px solid;
+  background-color: aliceblue;
+  border: 3px solid black;
+
   border-radius: 5px;
 }
